--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+:root {
+    --main-color:#a16e2c;
+    --second-color: burlywood;
+    --third-color: #ce954b;
+    --font-color:white;
+    
+    --font-type: 'Courier New', Courier, monospace;
+  }
+
 .main{
     display: flex;
     justify-content: center;
@@ -14,7 +23,7 @@
 .calcBody{
     width: 400px;
     height: 600px;
-    background-color:black;
+    background-color: var(--main-color);
     align-items: center;
     border-radius: 10px;
     display:flex;
@@ -27,20 +36,21 @@
 .display{
     width: 80%;
     height: 25%;
-    background-color:black;
-    color:ghostwhite;
+    background-color:var(--main-color);
+    color: var(--font-color);
     border-radius: 10px;
 }
 
 .numberEntered{
     width:100%;
     height:40%;
-    padding-right: 30px;
+    white-space: nowrap;
     font-size: 1.5em;
+    overflow-x: auto;
     display: grid;
     justify-content: end;
     align-items: center;
-    text-overflow: clip;
+    font-family: var(--font-type);
 }
 
 .displayResult{
@@ -51,12 +61,13 @@
     display: grid;
     justify-content: end;
     align-items: center;
+    font-family: var(--font-type);
 }
 
 .buttons{
     width: 80%;
     height: 60%;
-    background-color: black;
+    background-color: var(--main-color);
     border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -65,9 +76,20 @@
 }
 
 .calcButton{
-    background-color:burlywood;
+    background-color:var(--second-color);
+    color:black;
     border-radius: 6%;
     display: grid;
     justify-content: center;
     align-items: center;
+    font-size: 1.7em;
+    font-weight: bold;
+    font-family: var(--font-type);
+}
+.calcButton:hover{
+    background-color:var(--third-color);
+}
+
+.btnZero, .btnClear{
+    grid-column: 1/span 2;
 }
